style.css
*,
*::before,
*::after {
  box-sizing: border-box;
  padding: 0;
  margin: 0;
}

html {
    position: relative;
    min-height: 100%;
}

body {
    font-family: 'Roboto', sans-serif;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    text-align: center;
    background-color: rgb(192, 255, 164);
    height: 75vh;
    min-height: 500px;
    padding: 10px;
    margin-top: 50px;
    margin-bottom: 100px;
}

#container {
    background-color: rgb(58, 58, 58);
    border: 2px black solid;
    border-radius: 10px;
    width: 400px;
    padding: 10px 20px;
    margin-bottom: 20px;
    display: grid;
    justify-content: center;
    align-items: center;
    grid-template-columns: repeat(4, 1fr);
    gap: 10px;
}

.footer {
    display: flex;
    justify-content: center;
    gap: 10px;
    width: 100%;
    padding: 10px;
    font-size: 16px;
    position: absolute;
    bottom: 0;
    left: 0;
}

#container > button {
    cursor: pointer;
    font-size: 2rem;
    outline: none;
    padding: 8px;
    border: 2px black solid;
    border-radius: 10px;
}

#container > button:hover {
    transform: scale(1.03);
    cursor: pointer;
}

#container > button:active {
    box-shadow: none;
    transform: translateY(0);
}

.double {
    grid-column: span 2;
}

.screen {
    grid-column: 1 / -1;
    background-color: rgb(192, 255, 164);
    border: 2px black solid;
    border-radius: 10px;
    margin-bottom: 20px;
    margin-top: 10px;
    text-align: right;
    padding: 10px 20px;
    word-wrap: break-word;
    word-break: break-all;
}

.last {
    font-size: 1rem;
}

.curr {
    font-size: 3.5rem;
}

.clear {
    background-color: rgb(255, 134, 134);
}

.delete {
    background-color: rgb(146, 146, 255);
}

